# Knowledgebase

./: .env.coolify  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routes/: admin.py  bootstrap.py  documents.py  health.py  ingest.py  search.py  status.py
app/core/: config.py  pipeline.py  registry.py  startup.py
app/db/: migrate.py  models.py  pool.py  session.py
app/db/migrations/: 001_initial.sql
app/embedding/: embedder.py
app/ingestion/: chunker.py  tabular_profiler.py
app/models/: domain.py  schemas.py
app/parsers/: docx.py  html.py  local_unstructured.py  pdf.py  plain.py  router.py  unstructured.py
app/search/: engine.py  tabular_engine.py
app/storage/: mindsdb_client.py  minio_client.py
app/vectorstore/: __init__.py  backend.py  chroma_store.py  qdrant_store.py
app/workers/: db_queue.py  embed_worker.py  index_worker.py  ingest_worker.py  purge_worker.py  queue.py
scripts/: dedup_e2e_test.py  e2e_test.py  load_test.py  manage.py  perf_test.py  queue_integration_test.py  rag_accuracy_test.py  rbac_tenant_test.py  tabular_complex_test.py  tabular_e2e_test.py
tests/: conftest.py  test_api.py  test_chunker.py  test_db_queue.py  test_deleted_doc_edge_cases.py  test_embedder.py  test_parsers.py  test_pipeline.py  test_registry.py  test_search_engine.py  test_startup.py  test_storage.py  test_vectorstore.py  test_workers.py
